name:            yi-voidex
version:         0.1.0
synopsis:        My configs for Yi editor
category:        Development, Editor
homepage:        http://github.com/mvoidex/yi-voidex
author:          Alexandr `voidex` Ruchkin
license:         BSD3
cabal-version:   >= 1.10
build-type:      Simple

library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base            >= 4 && < 5,
        yi              >= 0.6.5 && < 0.7
    exposed-modules:
        Yi.Keymap.Menu
        Yi.Keymap.Users.VoidEx
        Yi.Keymap.Users.VoidEx.Menu
        Yi.Config.Users.VoidEx
